[package]

name = "socket"
version = "0.0.5"
authors = ["Jakub Stasiak <jakub@stasiak.at>"]
license = "MIT"
description = "Low-level networking interface for Rust"
repository = "https://github.com/jstasiak/rust-socket"
readme = "README.md"


[lib]

name = "socket"
path = "src/lib.rs"


[dependencies]

libc = "*"
